--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,10 +6,12 @@ on:
     branches: [main]
   # run it during pull request
   pull_request:
+  
+jobs:
 
-defaults:
-  # define job to build and publish docker image
-  build-and-push-docker-image:
+  defaults:
+    # define job to build and publish docker image
+    build-and-push-docker-image:
     name: Build Docker image and push to repositories
     # run only when code is compiling and tests are passing
     runs-on: ubuntu-latest
