--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,13 +42,8 @@ jobs:
       - name: Build image and push to Docker Hub and GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
-          # relative path to the place where source code with Dockerfile is located
-          context: ./src/samples/simple
-          # Note: tags has to be all lower-case
-          tags: |
-            oskardudycz/eventsourcing.nodejs.simple:latest 
-            ghcr.io/oskardudycz/eventsourcing.nodejs/simple:latest
-          # build on feature branches, push only on main branch
+          context: .
+          tags: ${{ steps.meta.outputs.tags }}
           push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Image digest
