--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,9 +3,10 @@ name: Build and Publish
 on:
   # run it on push to the default repository branch
   push:
-    branches: [main]
+    branches: [ "main" ]
   # run it during pull request
   pull_request:
+    branches: [ "main" ]
   
 jobs:
 
