--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,14 +38,16 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
-      
+          password: ${{ secrets.GHCR_PAT }}    
+          
       - name: Build image and push to Docker Hub and GitHub Container Registry
+        id: build-and-push
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: ${{ github.ref == 'refs/heads/main' }}
+          push: ${{ github.ref == 'refs/head/main' }}
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
