--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,5 +26,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          push: true
-          tags: user/app:latest
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: akshaya09082000/demo-github
+          tag_with_ref: true
