--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Build and push image
+name: BUILD AND PUSH
 
 on:
   push:
@@ -18,16 +18,16 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
+       
+      - uses: docker/login-action@v2
+      - name: Login to DockerHub
+        env:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: akshaya09082000/demo-github:latest
-          tags: user/app:latest
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_TOKEN
+      - name: Build the docker image
+        run: docker build . --file Dockerfile --tag my-image/demo-github:$(date +%s)
+        
+      - name: Docker push
+        run: docker push akshaya09082000/demo-github:latest
