--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,8 @@ jobs:
         env:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          ecr: auto
+          logout: true
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_TOKEN
       - name: Build the docker image
