--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,13 +21,8 @@ jobs:
        
       - uses: docker/login-action@v2
       - name: Login to DockerHub
-        env:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          ecr: auto
-          logout: true
         run: |
-          docker login -u $DOCKER_USER -p $DOCKER_TOKEN
+          docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
       - name: Build the docker image
         run: docker build . --file Dockerfile --tag my-image/demo-github:$(date +%s)
         
