--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,8 +22,8 @@ jobs:
       - uses: docker/login-action@v2
       - name: Login to DockerHub
         with:
-          ecr: auto
-          logout: true
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
         
       - uses: docker/login-action@v2
       - name: build and push
