--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: BUILD AND PUSH
+name: ci
 
 on:
   push:
@@ -10,26 +10,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-       
-      - uses: docker/login-action@v2
-      - name: Login to DockerHub
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: build and push
-        run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
-      - name: Build the docker image
-        run: docker build . --file Dockerfile --tag my-image/demo-github:$(date +%s)
-        
-      - name: Docker push
-        run: docker push akshaya09082000/demo-github:latest
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: user/app:latest
