--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -31,8 +31,11 @@ jobs:
           repository: akshaya09082000/demo-github
           tag_with_ref: true
           
-      - name: Build the image and push
-        run: docker build . --file Dockerfile --tag my-image:$(date +%s)
-        
-      - name: docker push
-        run: docker push akshaya09082000/demo-github:my-image
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: user/app:latest
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
