--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,9 @@ on:
     branches: [main]
   # run it during pull request
   pull_request:
-
+  
+jobs:
+ 
 defaults:
   # define job to build and publish docker image
   build-and-push-docker-image:
@@ -47,7 +49,7 @@ defaults:
             oskardudycz/eventsourcing.nodejs.simple:latest 
             ghcr.io/oskardudycz/eventsourcing.nodejs/simple:latest
           # build on feature branches, push only on main branch
-          push: docker push akshaya09082000/demo-github:tagname
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
