--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,55 +1,62 @@
-name: Build and Publish
+name: 'build images'
 
 on:
-  # run it on push to the default repository branch
   push:
-    branches: [main]
-  # run it during pull request
-  pull_request:
-  
+    branches:
+      - main
 jobs:
- 
-   defaults:
-   # define job to build and publish docker image
-   build-and-push-docker-image:
-     name: Build Docker image and push to repositories
-     # run only when code is compiling and tests are passing
-     runs-on: ubuntu-latest
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    # steps to perform in job
-     steps:
-       - name: Checkout code
-         uses: actions/checkout@v2
+      - name: Prepare
+        id: prep
+        run: |
+          DOCKER_IMAGE=${{ secrets.DOCKER_USERNAME }}/${GITHUB_REPOSITORY#*/}
+          VERSION=latest
+          SHORTREF=${GITHUB_SHA::8}
 
-      # setup Docker buld action
-       - name: Set up Docker Buildx
-         id: buildx
-         uses: docker/setup-buildx-action@v1
+          # If this is git tag, use the tag name as a docker tag
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+          fi
+          TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:${SHORTREF}"
 
-       - name: Login to DockerHub
-         uses: docker/login-action@v1
-         with:
-           username: ${{ secrets.DOCKERHUB_USERNAME }}
-           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          # If the VERSION looks like a version number, assume that
+          # this is the most recent version of the image and also
+          # tag it 'latest'.
+          if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
+            TAGS="$TAGS,${DOCKER_IMAGE}:latest"
+          fi
 
-       - name: Login to Github Packages
-         uses: docker/login-action@v1
-         with:
-           registry: ghcr.io
-           username: ${{ github.actor }}
-           password: ${{ secrets.GHCR_PAT }}
-      
-       - name: Build image and push to Docker Hub and GitHub Container Registry
-         uses: docker/build-push-action@v2
-         with:
-           # relative path to the place where source code with Dockerfile is located
-           context: ./src/samples/simple
-           # Note: tags has to be all lower-case
-           tags: |
-             oskardudycz/eventsourcing.nodejs.simple:latest 
-             ghcr.io/oskardudycz/eventsourcing.nodejs/simple:latest
-           # build on feature branches, push only on main branch
-           push: ${{ github.ref == 'refs/heads/main' }}
+          # Set output parameters.
+          echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=docker_image::${DOCKER_IMAGE}
 
-       - name: Image digest
-         run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: all
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+
+      - name: Login to DockerHub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/ppc64le
+          push: true
+          tags: ${{ steps.prep.outputs.tags }}
