--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
+          ecr: auto
+          logout: true
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
