--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,6 +21,9 @@ env:
   # github.repository as <account>/<repo>
   
   IMAGE_NAME: ${{ github.repository }}
+  DOCKER: docker build and push
+  username: ${{ secrets.DOCKERHUB_USERNAME }}
+  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 
 jobs:
@@ -41,21 +44,18 @@ jobs:
     # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v1
-    
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
-    
-          REGISTRY: ghcr.io
-          IMAGE_NAME: Akshaya-clops/new-job
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -95,7 +95,7 @@ jobs:
         run:  |
           docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
       - name: Build the docker image
-        run: docker build . --file Dockerfile --tag main.go/github:$(date +%s)
+        run: docker build . --file Dockerfile --tag Akshaya-clops/new-job/github:$(date +%s)
         
       - name: Docker Push
-        run: docker push akshaya09082000/github:tagname
+        run: docker push akshaya09082000/github:Akshaya-clops/new-job
