--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -74,11 +74,22 @@ jobs:
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v2
-        with:
+        with: 
           context: .
           file: ./Dockerfile
           push: true
           tags: user/app:latest
+          load: false
+          no-cache: false
+          pull: false
+          github-token: ${{GHCR_PAT}}
+        env:
+          REGISTRY: ghcr.io
+          IMAGE_NAME: Akshaya-clops/new-job
+          DOCKER: docker build and push
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_TOKEN}}
+
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
