--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -71,26 +71,14 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
-        id: build-and-push
+      -
+        name: Build and push
         uses: docker/build-push-action@v2
-        with: 
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: user/app:latest
-          load: false
-          no-cache: false
-          pull: false
-          
-        env:
-          REGISTRY: ghcr.io
-          IMAGE_NAME: Akshaya-clops/new-job
-          DOCKER: docker build and push
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_TOKEN}}
-
-
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+          repository: akshaya09082000/demo-github
+          tag_with_ref: true
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
       # repository is public to avoid leaking data.  If you would like to publish
