--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,21 +1,23 @@
 name: build and push the image 
 
-on: push
+on:
+  push:
+    branches:
+      - main
 jobs:
-  build-container:
-  name: Build container
-  runs-on: ubuntu-latest
-  steps:
-  - name: Checkout code
-    uses: actions/checkoutout@v3
-  - name: Login to Docker Hub
-    uses: docker/login-action@v1
-    with:
-      username: ${{ secrets.DOCKERHUB_USERNAME }}
-      password: ${{ secrets.DOCKERHUB_TOKEN }}
-  - name: Build and push to Docker Hub
-    uses: docker/build-push-action@v2
-    with:
-      context: .
-      push: true
-      tags: akshaya09082000/webapp:latest, akshaya09082000/webapp:${{ github.run_number }}
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkoutout@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: akshaya09082000/webapp:latest, akshaya09082000/webapp:${{ github.run_number }}
