--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,23 +1,25 @@
 name: build and push the image 
-
-on:
-  push:
-    branches:
-      - main
+on: push
 jobs:
-  docker:
+  build-container:
+    name: Build Docker container image
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkoutout@v3
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push to Docker Hub
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: akshaya09082000/webapp:latest, akshaya09082000/webapp:${{ github.run_number }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: publish to GitHub Packages
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: ${{ github.repository }}/webapp
+          tags: latest, ${{ github.run_number }}
+      - name: Publish to docker hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+          repository: akshaya09082000/webapp
+          tags: latest, ${{ github.run_number }}
+          
