--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Publish to docker hub
         uses: docker/build-push-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: akshaya09082000/webapp
           tags: latest, ${{ github.run_number }}
           
