--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,24 +1,30 @@
-name: build and push the image 
-on: push
-jobs:
-  build-container:
-    name: Build Docker container image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: publish to GitHub Packages
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: ${{ github.repository }}/new-job
-          tags: latest, ${{ github.run_number }}
-      - name: Publish to docker hub
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: akshaya09082000/new-job
-          tags: latest, ${{ github.run_number }}
-          
+name: Build and push the docker image
+
+on:
+ push:
+   branches: [ "main" ]
+ pull_request:
+   branches: [ "main" ]
+   
+ jobs:
+   docker:
+     runs-on: ubuntu-latest
+     steps:
+       - name: check out the repo
+         uses: actions/checkout@v2
+         
+       - name: set up docker Buildx
+         uses: docker/setup-buildx-action@v2
+         
+       - name: login to DockerHub
+         uses: docker/login-action@v2
+         with:
+           username: ${{ secrets.DOCKERHUB_USERNAME }}
+           password: ${{ secrets.DOCKERHUB_TOKEN }}
+           
+       - name: build and push
+         uses: docker/build-push-action@v3
+         with:
+           push: true
+           repo: new-job
+           tags: akshaya09082000/new-job:v4
