--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -28,7 +28,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-          repository: akshaya09082000/demo-github
-          tag_with_ref: true
+          push: true
+          repo: new-job
+          tags: akshaya09082000/new-job:v4
+            
           
 
